k8s/core/overlays/eks/gnoland/rpc/gnoland-ingress-eks.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: gnoland-rpc-ingress
  namespace: gno
spec:
  routes:
  - match: Host(`rpc.k8s.gnoteam.com`)
    kind: Rule
    services:
    - name: gnoland-rpc
      namespace: gno
      port: rpc-public
