k8s/core/overlays/eks/gnoland/rpc/gnorpc-ingress-eks.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: gnoland-rpc-ingress
  namespace: gno
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`rpc.k8s.gnoteam.com`)
    kind: Rule
    services:
    - name: gnoland-rpc
      namespace: gno
      port: rpc-public
---
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: gnoland-rpc-ingress-tls
  namespace: gno
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`rpc.k8s.gnoteam.com`)
    kind: Rule
    services:
    - name: gnoland-rpc
      namespace: gno
      port: rpc-public
  tls:
    certResolver: dns-gnoresolver
